# zif

./: .gitignore  build.zig  readme.md
c-check/: build-and-run.sh  main.c
compatibility/: CMakeLists.txt  compatibility-raylib.c  compatibility-raylib.h
compatibility/src/: compatibility.c  compatibility.h  raylib-compatibility.c
game/: animations.zig  main.zig  raylib.zig  sprites.zig  vectors.zig
sbin/: build-compatibility.sh  rebuild.sh  run.sh
src/: c.zig  main.zig
